@@ -2,3 +2,6 @@
 This is a spring boot application. 
 
 Working on compiling spring boot maven app, still working on it. Removed enironmental variable path.
+
+Update Jenkins config file - # make jenkins listen on IPv4 address
+#JAVA_ARGS="-Xmx2048m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true"
